# gamedev-homeworks

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: homework.yml
dz-01-1/: CMakeLists.txt
dz-01-2/: CMakeLists.txt
dz-01-2/hello_bin/: CMakeLists.txt
dz-01-2/hello_lib/: CMakeLists.txt
dz-02/: CMakeLists.txt  task.txt
dz-02/bin_dynamic/: CMakeLists.txt
dz-02/bin_static/: CMakeLists.txt
dz-02/src/: main.cxx
dz-03/: CMakeLists.txt  task.txt
dz-03/src/: .game.cxx.swp  engine.cxx  engine.hxx  game.cxx
dz-04/: CMakeLists.txt  task.txt
dz-04/src/: 00_basic_canvas.cxx  00_basic_canvas.hxx  00_basic_canvas_main.cxx  01_basic_line.cxx  01_basic_line.hxx  01_basic_line_main.cxx  02_basic_triangle.cxx  02_basic_triangle.hxx  02_basic_triangle_main.cxx  03_vertex_buffer_triangle.cxx  03_vertex_buffer_triangle.hxx  03_vertex_buffer_triangle_main.cxx  04_indexed_triangle.cxx  04_indexed_triangle.hxx  04_indexed_triangle_main.cxx  05_interpolated_triangle.cxx  05_interpolated_triangle.hxx  05_interpolated_triangle_main.cxx  06_my_own_shader_main.cxx
dz-05/: CMakeLists.txt
dz-05/glad/include/glad/: glad.h
dz-05/glad/src/: glad.c
dz-05/src/: engine.cxx  engine.hxx  game.cxx
dz-06/: CMakeLists.txt
dz-06/src/: engine.cxx  engine.hxx  game.cxx
dz-07/: CMakeLists.txt
dz-07/glad/src/: glad.c
dz-07/src/: engine.cxx  engine.hxx  game.cxx
dz-final-project/: CMakeLists.txt
dz-final-project/glad/src/: glad.c
dz-final-project/src/: engine.cxx  engine.hxx  game.cxx
